icon align fix (#3507)

--- a/src/app/fyle/my-view-report/add-expenses-to-report/add-expenses-to-report.component.scss
+++ b/src/app/fyle/my-view-report/add-expenses-to-report/add-expenses-to-report.component.scss
@@ -64,6 +64,8 @@
       align-items: center;
       justify-content: center;
       gap: -1px;
+      flex-wrap: nowrap;
+      white-space: nowrap;
       &--icon {
         height: 14px;
         color: $dark-grey;
